tests/error/ptr_from_const.gw
1 :=> var Ptr<~int~> i;
